--- a/calcImc.html
+++ b/calcImc.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="sylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Calculadora de IMC</title>
 </head>
+
 <body>
     <main>
         <div class="container">
@@ -22,11 +24,12 @@
                 <label>Peso:</label>
                 <input type="number" id="peso">
                 <buton id="calcular">Calcular</buton>
-                
+
                 <div class="result" id="resultado"></div>
             </div>
         </div>
     </main>
     <script src="calcIMC.js"></script>
 </body>
+
 </html>
